--- a/Nivantis/Nivantis/Views/MainPage.xaml
+++ b/Nivantis/Nivantis/Views/MainPage.xaml
@@ -5,7 +5,7 @@
             x:Class="Nivantis.Views.MainPage">   
     
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
+        <NavigationPage Title="Browse" BarBackgroundColor="#80d6ff">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
@@ -16,13 +16,13 @@
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="Calcul">
+        <NavigationPage Title="Calcul" >
             <x:Arguments>
                 <views:CalculationPage />
             </x:Arguments>
         </NavigationPage>
-        
-        <NavigationPage Title="About">
+
+        <NavigationPage Title="About" >
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_about.png"/>
