--- a/Nivantis/Nivantis/Views/CalculationDetailPage.xaml
+++ b/Nivantis/Nivantis/Views/CalculationDetailPage.xaml
@@ -15,25 +15,33 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>                    
                 </Grid.ColumnDefinitions>
 
-               
-
-                <Label Grid.Row="0" Grid.Column="0"
-                       HorizontalTextAlignment="Center"
+                <StackLayout Grid.Row="0" Grid.Column="0">
+                    <Label Text="Taux de remise" FontSize="Large"/>
+                    <Label HorizontalTextAlignment="Center"
                        Text="{ Binding Calculation.Discount, StringFormat=' {0:F2} %' }"
                        FontSize="Large"/>
-                <Label Grid.Row="0" Grid.Column="1"
-                       HorizontalTextAlignment="Center"
+                </StackLayout>
+
+                <StackLayout Grid.Row="0" Grid.Column="1">
+                    <Label Text="Prix d'achat net" FontSize="Large"/>
+                    <Label HorizontalTextAlignment="Center"
                        Text="{ Binding Calculation.NetPurchasePrice, StringFormat=' {0:F2} €' }"
                        FontSize="Large"/>
-                <Label Grid.Row="1" Grid.Column="0"
-                       HorizontalTextAlignment="Center"
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="0">
+                    <Label Text="Prix de vente net" FontSize="Large"/>
+                    <Label HorizontalTextAlignment="Center"
                        Text="{ Binding Calculation.NetSellingPrice, StringFormat=' {0:F2} €' }"
                        FontSize="Large"/>
-                <Label Grid.Row="1" Grid.Column="1"
-                       HorizontalTextAlignment="Center"
+                </StackLayout>
+
+                <StackLayout Grid.Row="1" Grid.Column="1">
+                    <Label Text="Coéfficient" FontSize="Large"/>
+                    <Label HorizontalTextAlignment="Center"
                        Text="{ Binding Calculation.Multiplier, StringFormat=' {0:F2}' }"
                        FontSize="Large"/>
-
+                </StackLayout>
             </Grid>
             
         </StackLayout>
