--- a/Nivantis/Nivantis/Views/LoginPage.xaml
+++ b/Nivantis/Nivantis/Views/LoginPage.xaml
@@ -18,8 +18,8 @@
                     <ColumnDefinition Width="0.5*"/>
                 </Grid.ColumnDefinitions>
                 <StackLayout Grid.Row="1" Grid.Column="1">
-                    <custom:LoginEntry x:Name="Login" Placeholder="Login"></custom:LoginEntry>
-                    <custom:LoginEntry x:Name="Password" Placeholder="Mot de passe" IsPassword="True" Margin="0, 0, 0, 40"></custom:LoginEntry>
+                    <custom:LoginEntry x:Name="Login" Placeholder="Login" Text="mael.pillon"></custom:LoginEntry>
+                    <custom:LoginEntry x:Name="Password" Placeholder="Mot de passe" IsPassword="True" Margin="0, 0, 0, 40" Text="123"></custom:LoginEntry>
                     <custom:LoginButton Text="Connexion" Clicked="LoginButton_Clicked"></custom:LoginButton>
                     <ActivityIndicator x:Name="ActIndicator"  
                        IsRunning="False"  
