--- a/Nivantis/Nivantis/Views/CalculationDetailPage.xaml
+++ b/Nivantis/Nivantis/Views/CalculationDetailPage.xaml
@@ -16,31 +16,35 @@
                 </Grid.ColumnDefinitions>
 
                 <StackLayout Grid.Row="0" Grid.Column="0">
-                    <Label Text="Taux de remise" FontSize="Large"/>
+                    <Label Text="Taux de remise" TextColor="{StaticResource Primary}" FontSize="Large" HorizontalTextAlignment="Center"/>
                     <Label HorizontalTextAlignment="Center"
-                       Text="{ Binding Calculation.Discount, StringFormat=' {0:F2} %' }"
-                       FontSize="Large"/>
+                            Text="{ Binding Calculation.Discount, StringFormat=' {0:F2} %' }"
+                            TextColor="Black"
+                            FontSize="Large"/>
                 </StackLayout>
 
                 <StackLayout Grid.Row="0" Grid.Column="1">
-                    <Label Text="Prix d'achat net" FontSize="Large"/>
+                    <Label Text="Prix d'achat net" TextColor="{StaticResource Primary}" FontSize="Large" HorizontalTextAlignment="Center"/>
                     <Label HorizontalTextAlignment="Center"
-                       Text="{ Binding Calculation.NetPurchasePrice, StringFormat=' {0:F2} €' }"
-                       FontSize="Large"/>
+                            Text="{ Binding Calculation.NetPurchasePrice, StringFormat=' {0:F2} €' }"
+                            TextColor="Black"
+                            FontSize="Large"/>
                 </StackLayout>
 
                 <StackLayout Grid.Row="1" Grid.Column="0">
-                    <Label Text="Prix de vente net" FontSize="Large"/>
+                    <Label Text="Prix de vente net" TextColor="{StaticResource Primary}" FontSize="Large" HorizontalTextAlignment="Center"/>
                     <Label HorizontalTextAlignment="Center"
-                       Text="{ Binding Calculation.NetSellingPrice, StringFormat=' {0:F2} €' }"
-                       FontSize="Large"/>
+                            Text="{ Binding Calculation.NetSellingPrice, StringFormat=' {0:F2} €' }"
+                            TextColor="Black"
+                            FontSize="Large"/>
                 </StackLayout>
 
                 <StackLayout Grid.Row="1" Grid.Column="1">
-                    <Label Text="Coéfficient" FontSize="Large"/>
+                    <Label Text="Coéfficient" TextColor="{StaticResource Primary}" FontSize="Large" HorizontalTextAlignment="Center"/>
                     <Label HorizontalTextAlignment="Center"
-                       Text="{ Binding Calculation.Multiplier, StringFormat=' {0:F2}' }"
-                       FontSize="Large"/>
+                            Text="{ Binding Calculation.Multiplier, StringFormat=' {0:F2}' }"
+                            TextColor="Black"
+                            FontSize="Large"/>
                 </StackLayout>
             </Grid>
             
