--- a/Nivantis/Nivantis/Views/MainPage.xaml
+++ b/Nivantis/Nivantis/Views/MainPage.xaml
@@ -5,14 +5,9 @@
             x:Class="Nivantis.Views.MainPage">   
     
     <TabbedPage.Children>
-        <NavigationPage Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
+        <NavigationPage Title="Pharmacies">            
             <x:Arguments>
-                <views:ItemsPage />
+                <views:PharmacyPage />
             </x:Arguments>
         </NavigationPage>
 
