--- a/Nivantis/Nivantis/Views/LoginPage.xaml
+++ b/Nivantis/Nivantis/Views/LoginPage.xaml
@@ -20,9 +20,9 @@
                 
                 <StackLayout Grid.Row="1" Grid.Column="1">
 
-                    <custom:LoginEntry x:Name="Login" Placeholder="Login" TextColor="White"></custom:LoginEntry>
+                    <custom:LoginEntry x:Name="Login" Placeholder="Login" TextColor="Black"></custom:LoginEntry>
 
-                    <custom:LoginEntry x:Name="Password" Placeholder="Mot de passe" TextColor="White"  IsPassword="True" Margin="0, 0, 0, 40"></custom:LoginEntry>
+                    <custom:LoginEntry x:Name="Password" Placeholder="Mot de passe" TextColor="Black"  IsPassword="True" Margin="0, 0, 0, 40"></custom:LoginEntry>
                     
                     <custom:LoginButton Text="Connexion" TextColor="White" Clicked="LoginButton_Clicked"></custom:LoginButton>
                     
