--- a/Nivantis/Nivantis.UWP/App.xaml
+++ b/Nivantis/Nivantis.UWP/App.xaml
@@ -3,5 +3,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Nivantis.UWP">
+    <Application.Resources>
+        <ResourceDictionary>
+            
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
