--- a/Nivantis/Nivantis/Views/MainPage.xaml
+++ b/Nivantis/Nivantis/Views/MainPage.xaml
@@ -7,22 +7,17 @@
     <TabbedPage.Children>
         <NavigationPage Title="Pharmacies">            
             <x:Arguments>
-                <views:PharmacyPage />
+                <views:SearchPharmacyPage />
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="Calcul" >
+        <NavigationPage Title="Calcul">
             <x:Arguments>
                 <views:CalculationPage />
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="About" >
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
+        <NavigationPage Title="About">            
             <x:Arguments>
                 <views:AboutPage />
             </x:Arguments>
