--- a/Nivantis/Nivantis/Views/Pharmacy/PharmacyPage.xaml
+++ b/Nivantis/Nivantis/Views/Pharmacy/PharmacyPage.xaml
@@ -1,20 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Nivantis.Views.PharmacyPage">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="AddPharmacy_Clicked"></ToolbarItem>
-    </ContentPage.ToolbarItems>
+             x:Class="Nivantis.Views.PharmacyPage">    
     <ContentPage.Content>        
         <ListView x:Name="PharmacyList" 
                 ItemsSource="{Binding Pharmacies}"
                 VerticalOptions="FillAndExpand"
-                 HasUnevenRows="true"
-                 RefreshCommand="{Binding LoadPharmaciesCommand}"
-                 IsPullToRefreshEnabled="true"
-                 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                 CachingStrategy="RecycleElement"
-                 ItemSelected="OnItemSelected">
+                HasUnevenRows="true"
+                IsPullToRefreshEnabled="true"
+                CachingStrategy="RecycleElement"
+                ItemSelected="OnItemSelected">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -23,10 +18,10 @@
                        LineBreakMode="NoWrap" 
                        Style="{DynamicResource ListItemTextStyle}" 
                        FontSize="16" />
-                            <Label Text="{Binding City}" 
+                            <!--<Label Text="{Binding City}" 
                        LineBreakMode="NoWrap"
                        Style="{DynamicResource ListItemDetailTextStyle}"
-                       FontSize="13" />
+                       FontSize="13" />-->
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
